Version 1.1.0-CVS (?? ??? 2006)
 - Implemented RFE 1490058: export a certain category
 - Fixed bug 1489354: installation wizard doesn't work after 'step3'
 - Fixed bug 1490179: Error after upgrading to latest CVS 1.1
 - Fixed bug 1491406: using 'Not yet registered? Register here!' cause an error
 - Fixed bug 1490944: 1.1.0 works only with firefox
 - Fixed bug 1490979: descriptions of preferences will not be <bold>
 - Fixed bug 1490969: option 'Display tasks in Calendars:' enabled will not work
 - Fixed bug 1490749: reminder-entry in pop-up couldn't be translated
 - Fixed bug 1490046: Time zone problems
 - Fixed bug 1474991: Can't see all participants in availability window
 - Fixed bug 1476022: Availability Status
 - Fixed bug 1434994: minitask leaks details on other user's private tasks
 - Fixed bug 1489393: "Add Entry" defaults to first work hour
 - Fixed bug 1488942: 'system settings' and 'preferences' couldn't be displayed
 - Fixed bug 1462457: reminder form should have more conditionally disabled fields
 - Implemented RFE 1379431: Global Layers!
 - Implemented RFE 1337524: not proper display of "Repeating events" in 'view_entry.php'
 - Implemented dropdown time entry fields based on PATCH 1276894
 - Added option to set remote access permissions to publish.php and rss.php
 - Impemented RFE 1470722: option to disable 2nd entry of cross-day event
 - Fixed bug 1448727: Conflict changes national characters
 - Fixed bug 1477303: CVS Cross-Day events bug
 - Fixed bug 1474888: Timezone issue on updated timestamp (1.1.cvs)
 - Implemented RFE 617965: approve/confirm/reject all events
 - PATCH 1470047: Auto-Completing Tasks
 - Changed gradients to save images in cache file and return real 
   url if called from background_css function in css files
 - Changed css and javascript to external files and enabled caching
 - Added db_cachedir setting to install/index.php script
 - Fixed bug 1467713: report belongs to a deleted user remains in DB